New help system

--- a/plugins/robots/editor/doc/changelog.txt
+++ b/plugins/robots/editor/doc/changelog.txt
@@ -1,35 +1,35 @@
-Что изменено в QReal:Robots 2.0.0 RC1
+Р§С‚Рѕ РёР·РјРµРЅРµРЅРѕ РІ QReal:Robots 2.0.0 RC1
 
-- Исправлено зависание при сохранении настроек
-- Исправлена критическая ошибка, появляющаяся при сохранеии настроек под Windows
-- Исправлено некорректное поведение проверки конфигурации сенсоров
-- Существенно улучшена 2D модель
-	- Исправлено некорректное поведение стенок при довавлении на них других элементов
-	- Исправлено некорректное поведение робота и сенсоров при их вращении
-	- Исправлено некорректное поведение сенсоров в некоторых ситуациях
-	- Исправлено "застревание" робота в стене
-	- Улучшена отрисовка проигрывания роботом звука
-	- Исправлено отслеживание удаления сенсоров на панели сбоку
-	- Исправлено падение при очистке сцены
-	- Добавлена возможность удалять элементы без полной очистке сцены
-	- Исправлено множество других внутренних ошибок
-	
-- Исправлена коммуникация с сенсором расстояния на реальном роботе
+- РСЃРїСЂР°РІР»РµРЅРѕ Р·Р°РІРёСЃР°РЅРёРµ РїСЂРё СЃРѕС…СЂР°РЅРµРЅРёРё РЅР°СЃС‚СЂРѕРµРє
+- РСЃРїСЂР°РІР»РµРЅР° РєСЂРёС‚РёС‡РµСЃРєР°СЏ РѕС€РёР±РєР°, РїРѕСЏРІР»СЏСЋС‰Р°СЏСЃСЏ РїСЂРё СЃРѕС…СЂР°РЅРµРёРё РЅР°СЃС‚СЂРѕРµРє РїРѕРґ Windows
+- РСЃРїСЂР°РІР»РµРЅРѕ РЅРµРєРѕСЂСЂРµРєС‚РЅРѕРµ РїРѕРІРµРґРµРЅРёРµ РїСЂРѕРІРµСЂРєРё РєРѕРЅС„РёРіСѓСЂР°С†РёРё СЃРµРЅСЃРѕСЂРѕРІ
+- РЎСѓС‰РµСЃС‚РІРµРЅРЅРѕ СѓР»СѓС‡С€РµРЅР° 2D РјРѕРґРµР»СЊ
+	- РСЃРїСЂР°РІР»РµРЅРѕ РЅРµРєРѕСЂСЂРµРєС‚РЅРѕРµ РїРѕРІРµРґРµРЅРёРµ СЃС‚РµРЅРѕРє РїСЂРё РґРѕРІР°РІР»РµРЅРёРё РЅР° РЅРёС… РґСЂСѓРіРёС… СЌР»РµРјРµРЅС‚РѕРІ
+	- РСЃРїСЂР°РІР»РµРЅРѕ РЅРµРєРѕСЂСЂРµРєС‚РЅРѕРµ РїРѕРІРµРґРµРЅРёРµ СЂРѕР±РѕС‚Р° Рё СЃРµРЅСЃРѕСЂРѕРІ РїСЂРё РёС… РІСЂР°С‰РµРЅРёРё
+	- РСЃРїСЂР°РІР»РµРЅРѕ РЅРµРєРѕСЂСЂРµРєС‚РЅРѕРµ РїРѕРІРµРґРµРЅРёРµ СЃРµРЅСЃРѕСЂРѕРІ РІ РЅРµРєРѕС‚РѕСЂС‹С… СЃРёС‚СѓР°С†РёСЏС…
+	- РСЃРїСЂР°РІР»РµРЅРѕ "Р·Р°СЃС‚СЂРµРІР°РЅРёРµ" СЂРѕР±РѕС‚Р° РІ СЃС‚РµРЅРµ
+	- РЈР»СѓС‡С€РµРЅР° РѕС‚СЂРёСЃРѕРІРєР° РїСЂРѕРёРіСЂС‹РІР°РЅРёСЏ СЂРѕР±РѕС‚РѕРј Р·РІСѓРєР°
+	- РСЃРїСЂР°РІР»РµРЅРѕ РѕС‚СЃР»РµР¶РёРІР°РЅРёРµ СѓРґР°Р»РµРЅРёСЏ СЃРµРЅСЃРѕСЂРѕРІ РЅР° РїР°РЅРµР»Рё СЃР±РѕРєСѓ
+	- РСЃРїСЂР°РІР»РµРЅРѕ РїР°РґРµРЅРёРµ РїСЂРё РѕС‡РёСЃС‚РєРµ СЃС†РµРЅС‹
+	- Р”РѕР±Р°РІР»РµРЅР° РІРѕР·РјРѕР¶РЅРѕСЃС‚СЊ СѓРґР°Р»СЏС‚СЊ СЌР»РµРјРµРЅС‚С‹ Р±РµР· РїРѕР»РЅРѕР№ РѕС‡РёСЃС‚РєРµ СЃС†РµРЅС‹
+	- РСЃРїСЂР°РІР»РµРЅРѕ РјРЅРѕР¶РµСЃС‚РІРѕ РґСЂСѓРіРёС… РІРЅСѓС‚СЂРµРЅРЅРёС… РѕС€РёР±РѕРє
 
-
-Что изменено в QReal:Robots 2.0.0 RC2
-- Улучшения в интерфейсах QReal и 2D модели
-- Автонастройка сенсоров в 2D модели
-- Настраиваемость видимости надписей под пиктограммами элементов
-- Сглажена отрисовка линии карандашом в 2D модели
-- Исправления в работе сенсоров
-- Исправлена ошибка, связанная с изменением траектории при переключении скорости воспроизведения
-- Сопоставление расширений *.qrs и QReal
-- Множество других мелких исправлений
-- Убран блок инициализации (теперь настройки сенсоров проводятся на панели сбоку)
+- РСЃРїСЂР°РІР»РµРЅР° РєРѕРјРјСѓРЅРёРєР°С†РёСЏ СЃ СЃРµРЅСЃРѕСЂРѕРј СЂР°СЃСЃС‚РѕСЏРЅРёСЏ РЅР° СЂРµР°Р»СЊРЅРѕРј СЂРѕР±РѕС‚Рµ
 
 
-Что изменено в QReal:Robots 2.0.0 RC3
-- Обновлена документация
-- Исправлена ошибка перехода в полноэкранный режим
-- Другие мелкие исправления
+Р§С‚Рѕ РёР·РјРµРЅРµРЅРѕ РІ QReal:Robots 2.0.0 RC2
+- РЈР»СѓС‡С€РµРЅРёСЏ РІ РёРЅС‚РµСЂС„РµР№СЃР°С… QReal Рё 2D РјРѕРґРµР»Рё
+- РђРІС‚РѕРЅР°СЃС‚СЂРѕР№РєР° СЃРµРЅСЃРѕСЂРѕРІ РІ 2D РјРѕРґРµР»Рё
+- РќР°СЃС‚СЂР°РёРІР°РµРјРѕСЃС‚СЊ РІРёРґРёРјРѕСЃС‚Рё РЅР°РґРїРёСЃРµР№ РїРѕРґ РїРёРєС‚РѕРіСЂР°РјРјР°РјРё СЌР»РµРјРµРЅС‚РѕРІ
+- РЎРіР»Р°Р¶РµРЅР° РѕС‚СЂРёСЃРѕРІРєР° Р»РёРЅРёРё РєР°СЂР°РЅРґР°С€РѕРј РІ 2D РјРѕРґРµР»Рё
+- РСЃРїСЂР°РІР»РµРЅРёСЏ РІ СЂР°Р±РѕС‚Рµ СЃРµРЅСЃРѕСЂРѕРІ
+- РСЃРїСЂР°РІР»РµРЅР° РѕС€РёР±РєР°, СЃРІСЏР·Р°РЅРЅР°СЏ СЃ РёР·РјРµРЅРµРЅРёРµРј С‚СЂР°РµРєС‚РѕСЂРёРё РїСЂРё РїРµСЂРµРєР»СЋС‡РµРЅРёРё СЃРєРѕСЂРѕСЃС‚Рё РІРѕСЃРїСЂРѕРёР·РІРµРґРµРЅРёСЏ
+- РЎРѕРїРѕСЃС‚Р°РІР»РµРЅРёРµ СЂР°СЃС€РёСЂРµРЅРёР№ *.qrs Рё QReal
+- РњРЅРѕР¶РµСЃС‚РІРѕ РґСЂСѓРіРёС… РјРµР»РєРёС… РёСЃРїСЂР°РІР»РµРЅРёР№
+- РЈР±СЂР°РЅ Р±Р»РѕРє РёРЅРёС†РёР°Р»РёР·Р°С†РёРё (С‚РµРїРµСЂСЊ РЅР°СЃС‚СЂРѕР№РєРё СЃРµРЅСЃРѕСЂРѕРІ РїСЂРѕРІРѕРґСЏС‚СЃСЏ РЅР° РїР°РЅРµР»Рё СЃР±РѕРєСѓ)
+
+
+Р§С‚Рѕ РёР·РјРµРЅРµРЅРѕ РІ QReal:Robots 2.0.0 RC3
+- РћР±РЅРѕРІР»РµРЅР° РґРѕРєСѓРјРµРЅС‚Р°С†РёСЏ
+- РСЃРїСЂР°РІР»РµРЅР° РѕС€РёР±РєР° РїРµСЂРµС…РѕРґР° РІ РїРѕР»РЅРѕСЌРєСЂР°РЅРЅС‹Р№ СЂРµР¶РёРј
+- Р”СЂСѓРіРёРµ РјРµР»РєРёРµ РёСЃРїСЂР°РІР»РµРЅРёСЏ
