--- a/plugins/robots/editor/doc/changelog.txt
+++ b/plugins/robots/editor/doc/changelog.txt
@@ -1,4 +1,4 @@
-Что изменено в QReal:Robots 2.0.0 RC1
+QReal:Robots 2.0.0 RC1:
 
 - Исправлено зависание при сохранении настроек
 - Исправлена критическая ошибка, появляющаяся при сохранеии настроек под Windows
@@ -13,11 +13,11 @@
 	- Исправлено падение при очистке сцены
 	- Добавлена возможность удалять элементы без полной очистке сцены
 	- Исправлено множество других внутренних ошибок
-
 - Исправлена коммуникация с сенсором расстояния на реальном роботе
 
 
-Что изменено в QReal:Robots 2.0.0 RC2
+QReal:Robots 2.0.0 RC2:
+
 - Улучшения в интерфейсах QReal и 2D модели
 - Автонастройка сенсоров в 2D модели
 - Настраиваемость видимости надписей под пиктограммами элементов
@@ -29,7 +29,19 @@
 - Убран блок инициализации (теперь настройки сенсоров проводятся на панели сбоку)
 
 
-Что изменено в QReal:Robots 2.0.0 RC3
+QReal:Robots 2.0.0 RC3:
+
 - Обновлена документация
 - Исправлена ошибка перехода в полноэкранный режим
 - Другие мелкие исправления
+
+QReal:Robots 2.0.0 RC4:
+- Изменения в документации
+- Частично исправлена медленная работа 2D модели на некоторых компьютерах
+- Несколько исправлений, связанных с сенсором цвета
+- Исправлена некорректная работа таймеров в блоке звукового сигнала 2D модели
+- Убрана возможность вращать сенсоры в 2D модели (кроме сонара)
+- Добавлена поддержка сенсора света
+- Исправлена работа блока ожидания света
+- Убрано сообщение "Файл autosave.qrs не найден"
+- Множество других мелких исправлений
