--- a/plugins/robots/editor/doc/changelog.txt
+++ b/plugins/robots/editor/doc/changelog.txt
@@ -1,19 +1,26 @@
-QReal:Robots 2.0.0 RC1:
+QReal:Robots 2.0.0
+- Поддержаны коммуникации по I2C-шине через USB
+- Иконки на панелях управления
+- Множество других мелких исправлений
 
-- Исправлено зависание при сохранении настроек
-- Исправлена критическая ошибка, появляющаяся при сохранеии настроек под Windows
-- Исправлено некорректное поведение проверки конфигурации сенсоров
-- Существенно улучшена 2D модель
-	- Исправлено некорректное поведение стенок при довавлении на них других элементов
-	- Исправлено некорректное поведение робота и сенсоров при их вращении
-	- Исправлено некорректное поведение сенсоров в некоторых ситуациях
-	- Исправлено "застревание" робота в стене
-	- Улучшена отрисовка проигрывания роботом звука
-	- Исправлено отслеживание удаления сенсоров на панели сбоку
-	- Исправлено падение при очистке сцены
-	- Добавлена возможность удалять элементы без полной очистке сцены
-	- Исправлено множество других внутренних ошибок
-- Исправлена коммуникация с сенсором расстояния на реальном роботе
+
+QReal:Robots 2.0.0 RC4:
+- Изменения в документации
+- Частично исправлена медленная работа 2D модели на некоторых компьютерах
+- Несколько исправлений, связанных с сенсором цвета
+- Исправлена некорректная работа таймеров в блоке звукового сигнала 2D модели
+- Убрана возможность вращать сенсоры в 2D модели (кроме сонара)
+- Добавлена поддержка сенсора света
+- Исправлена работа блока ожидания света
+- Убрано сообщение "Файл autosave.qrs не найден"
+- Множество других мелких исправлений
+
+
+QReal:Robots 2.0.0 RC3:
+
+- Обновлена документация
+- Исправлена ошибка перехода в полноэкранный режим
+- Другие мелкие исправления
 
 
 QReal:Robots 2.0.0 RC2:
@@ -29,24 +36,19 @@ QReal:Robots 2.0.0 RC2:
 - Убран блок инициализации (теперь настройки сенсоров проводятся на панели сбоку)
 
 
-QReal:Robots 2.0.0 RC3:
+QReal:Robots 2.0.0 RC1:
 
-- Обновлена документация
-- Исправлена ошибка перехода в полноэкранный режим
-- Другие мелкие исправления
-
-QReal:Robots 2.0.0 RC4:
-- Изменения в документации
-- Частично исправлена медленная работа 2D модели на некоторых компьютерах
-- Несколько исправлений, связанных с сенсором цвета
-- Исправлена некорректная работа таймеров в блоке звукового сигнала 2D модели
-- Убрана возможность вращать сенсоры в 2D модели (кроме сонара)
-- Добавлена поддержка сенсора света
-- Исправлена работа блока ожидания света
-- Убрано сообщение "Файл autosave.qrs не найден"
-- Множество других мелких исправлений
-
-QReal:Robots 2.0.0
-- Поддержаны коммуникации по I2C-шине через USB
-- Иконки на панелях управления
-- Множество других мелких исправлений
+- Исправлено зависание при сохранении настроек
+- Исправлена критическая ошибка, появляющаяся при сохранении настроек под Windows
+- Исправлено некорректное поведение проверки конфигурации сенсоров
+- Существенно улучшена 2D модель
+	- Исправлено некорректное поведение стенок при добавлении на них других элементов
+	- Исправлено некорректное поведение робота и сенсоров при их вращении
+	- Исправлено некорректное поведение сенсоров в некоторых ситуациях
+	- Исправлено "застревание" робота в стене
+	- Улучшена отрисовка проигрывания роботом звука
+	- Исправлено отслеживание удаления сенсоров на панели сбоку
+	- Исправлено падение при очистке сцены
+	- Добавлена возможность удалять элементы без полной очистки сцены
+	- Исправлено множество других внутренних ошибок
+- Исправлена коммуникация с сенсором расстояния на реальном роботе
