--- a/plugins/robots/editor/doc/changelog.txt
+++ b/plugins/robots/editor/doc/changelog.txt
@@ -1,3 +1,10 @@
+QReal:Robots 2.0.1
+- Размер сетки уменьшен вдвое
+- При вытаскивании из палитры блоки имеют тот же размер, что и на сцене
+- Исправлена некорректная работа энкодеров в 2D модели при езде назад
+- Исправлено падение программы при разрыве потока управления
+
+
 QReal:Robots 2.0.0
 - Поддержаны коммуникации по I2C-шине через USB
 - Иконки на панелях управления
