Some changelog additions; Fixed stupid warning

--- a/plugins/robots/editor/doc/changelog.txt
+++ b/plugins/robots/editor/doc/changelog.txt
@@ -4,6 +4,9 @@
 - Исправлено медленное перечитывание значений сенсоров
 - Исправления в документации
 - Добавлено пустое значение в свойстве "Условие" связей
+- Добавлено логирование
+- Налажена работа сенсора касания в 2D модели
+- Исправлено несколько критических ошибок
 
 
 QReal:Robots 2.0.2
