Added space bar hand scene drag

--- a/plugins/robots/editor/doc/changelog.txt
+++ b/plugins/robots/editor/doc/changelog.txt
@@ -12,6 +12,7 @@
 - Линкеры перенесены на левую сторону, напись "Линия соединения" убрана
 - Изменение масштаба сцены теперь происходит по Ctrl+колесико, колечико мыши прокручивает сцену
 - Добавлены горячие клавиши на отркытие, сохранение, запуск и остановку интерпретатора (Ctrl+O, Ctrl+S, F5 и Shitf+F5 соответственно)
+- Добавлена прокрутка сцены "рукой" при зажатом пробеле
 
 
 QReal:Robots 2.0.2
