--- a/plugins/robots/editor/doc/changelog.txt
+++ b/plugins/robots/editor/doc/changelog.txt
@@ -1,4 +1,14 @@
-﻿QReal:Robots 2.2.0
+﻿QReal:Robots 2.3.0 RC1
+- Добавлена поддержка логических выражений в условный блок
+- Добавлена поддержка дробных типов в блоке "Функция"
+- Сенсоры в 2D модели заменены картинками
+- 2D модель мира и конфигурация сенсоров теперь привязываются к диаграмме
+- Добавлена поддержка режима торможения и скольжения
+- Налажена работа энкодеров в 2D модели
+- Добавлено отображение времени в 2D модели
+- Скорости вращения моторов в 2D модели приближены к реальным
+
+QReal:Robots 2.2.0
 - Налажена работа генераторов
 - Cygwin больше не требуется для загрузки программы на робота
 - Добавлено зашумление сенсоров и моторов в двумерной модели робота
