Some syntax fixes

--- a/plugins/robots/editor/doc/changelog.txt
+++ b/plugins/robots/editor/doc/changelog.txt
@@ -3,8 +3,8 @@
 - Добавлен блок комментариев
 - Добавлена деинсталляция предыдущей версии при установке новой
 - Добавлено выравнивание узлов связей по сетке
-- Добавлено всплывающее из палитры краткое описания блоков
-- Добавлена возможность редактирования значений появляющихся при выделении свойств
+- Добавлено всплывающее из палитры краткое описание блоков
+- Добавлена возможность редактирования значений свойств, появляющихся при выделении блоков
 - Уменьшена нагрузка на процессор при открытой 2D модели
 - Обновлены картинки сенсоров света и цвета в 2D модели
 - В стартовый диалог добавлены горячие клавиши
