updated changelog, changed version to 0.3.1

--- a/plugins/bpmn/changelog.txt
+++ b/plugins/bpmn/changelog.txt
@@ -1,3 +1,28 @@
+QReal:BP 0.3.1
+- Добавлена возможность перемещать элементы по сцене, нажимая на текст надписей 
+(до этого в такой ситуаци перемещалась сама надпись). Для перемещения надписей
+теперь надпись нужно предварительно выделить.
+- Исправлено несколько мелких ошибок.
+
+QReal:BP 0.3.0
+- Реализованы встроенные подпроцессы BPMN: отображение мини-версии диаграммы 
+внутри блока подпроцесса.
+- Расширен язык связями, задающими поток сообщений, и граничными событиями. 
+Добавлены новые типы для уже существующих событий: завершающее событие и 
+событие-сигнал.
+- Для элементов-пулов добавлено свойство множественности, для элементов-действий
+добавлена возможность указать тип цикла.
+- Расширены возможности соединения элементов с помощью встроенных 
+элементов-линкеров (соединение с элементами в контейнерах, соединение с самими 
+контейнерами и т.д.).
+- Реализована возможность экспорта модели в XML-файл.
+- Исправлена ошибка с окном предупреждений (более удобное выделение пунктов окна).
+- Исправлен ряд ошибок при загрузке моделей (восстановление состояния свернутости
+контейнеров, порядок элементов в сортирующем контейнере и т.д.).
+- Исправлена ошибка с копированием-вставкой элементов-контейнеров.
+- Исправлен ряд ошибок с надписями на элементах.
+- Добавлены два крупных примера моделей бизнес-процессов.
+
 QReal:BP 0.2.0
 - Добавлена возможность задавать подпроцессы, связывая соответствующие
 элементы с другими диаграммами.
