--- a/plugins/bpmn/changelog.txt
+++ b/plugins/bpmn/changelog.txt
@@ -1,3 +1,6 @@
+QReal:BP 0.5.0
+- Добавлен генератор форм целевых приложений
+
 QReal:BP 0.4.0
 - Добавлена диаграмма классов для моделирования сущностей.
 - Добавлена типизация портов элементов — например, для ряда элементов теперь
