--- a/plugins/robots/editor/doc/changelog.txt
+++ b/plugins/robots/editor/doc/changelog.txt
@@ -1,4 +1,10 @@
-﻿QReal:Robots 2.4.2
+﻿QReal:Robots 2.4.3
+- Обновлены генераторы: поддержан значительно больший спектр потоков управления
+- Добавлен второй набор примеров из книги С.А. Филиппова (спасибо М.М. Киселеву)
+- Исправлены некоторые неудобства при работе с тачевыми экранами
+
+
+QReal:Robots 2.4.2
 - Добавлены примеры из книги С.А. Филиппова (папка examples/Filippov-book-examples)
 - Обновлена документация
 - Несколько мелких исправлений
