minor changelog fixes

--- a/plugins/robots/editor/doc/changelog.txt
+++ b/plugins/robots/editor/doc/changelog.txt
@@ -1,8 +1,8 @@
 ﻿QReal:Robots 2.5.1
 - Обновления в документации: добавлено описание нововведений версии 2.5.0
-- Переработан пользовательский интерфейс стартовой вкладки
-- Процесс переключения между 2D моделью и другими моделями роботов сделан более быстрым и удобным: соответствующие пункты добавлены на панель инструментов
-- Исправлена ошибка, приводившая к автоматическому зацикливанию связей при небольшом расстоянию между блоками
+- Улучшен пользовательский интерфейс стартовой вкладки
+- Процесс переключения между 2D моделью и реальным роботом сделан более быстрым и удобным: соответствующие пункты добавлены на панель инструментов
+- Исправлена ошибка, приводившая к автоматическому зацикливанию связей при небольшом расстоянии между блоками
 - Убрана кнопка запуска программы на роботе, теперь система предлагает запустить программу сразу после загрузки. Автоматическое предложение запуска может быть отключено в настройках, вкладка "Роботы"
 - Внесено большое количество исправлений в поведении прокрутки и масштабирования сцены
 - Исправлено некорректное поведение ассоциаций .qrs-файлов со средой на некоторых платформах
@@ -15,7 +15,6 @@
 - Отключена возможность перетаскивать робота за стрелку поворота в 2D модели
 - Исправлено некорректное поведение стенок в 2D модели, время от времени проявляющееся при их перетаскивании при включенной сетке
 - Множество других улучшений в интерфейсе и поведении элементов на сцене
-
 
 
 QReal:Robots 2.5.0
